# dashbody

./: .coveragerc  .gitignore  AUTHORS.rst  CONTRIBUTING.rst  LICENSE  LICENSE.txt  README.md  README.rst  pyproject.toml  setup.cfg  setup.py
.github/workflows/: app.yml
dashbody/: dash.py
docs/: conf.py  index.rst
src/dashbody/: skeleton.py
tests/: conftest.py  test_dash.py  test_skeleton.py
