[tool.poetry]
name = "dashbody"
version = "0.1.0"
description = "Dashboard of biometric data"
authors = ["effidotpy <effidotpy@gmail.com>"]
license = "MIT"
readme = "README.rst"

[tool.poetry.dependencies]
python = "^3.9.5"
pydantic = "^2.6.3"

[tool.poetry.group.dev.dependencies]
pytest = "^3.0"
flake8 = "^7.0.0"
mypy = "^1.8.0"
black = "^24.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
